fixed shrinking of nav menu on iphones

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ a {
   padding: 20px 30px 0;
   box-sizing: border-box;
   justify-content: space-between;
-  flex: 1;
 }
 
 .header__logo {
